kubernetes/infra/networking/nginx/ingresses/minio-istio-config.yaml
---
# ServiceEntry for external MinIO server
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: minio-external
  namespace: networking
spec:
  hosts:
    - minio-external.local
  ports:
    - number: 9769
      name: minio-console
      protocol: HTTP
    - number: 9768
      name: minio-api
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 192.168.1.241
---
# DestinationRule for MinIO to handle traffic properly
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-external
  namespace: networking
spec:
  host: minio-external.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
# VirtualService for MinIO Console - simplified routing
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-ui-fixed
  namespace: networking
spec:
  hosts:
    - minio.enchantednatures.com
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio-external.local
            port:
              number: 9769
      headers:
        request:
          set:
            X-Forwarded-Proto: https
            X-Forwarded-Host: minio.enchantednatures.com
            Host: minio.enchantednatures.com
---
# VirtualService for MinIO API/S3 service
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-service-fixed
  namespace: networking
spec:
  hosts:
    - s3.enchantednatures.com
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio-external.local
            port:
              number: 9768
      headers:
        request:
          set:
            X-Forwarded-Proto: https
            X-Forwarded-Host: s3.enchantednatures.com
            Host: s3.enchantednatures.com
