kubernetes/infra/networking/nginx/ingresses/pve-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: pve
  namespace: networking
spec:
  host: pve.networking.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
